borsh/tests/roundtrip/snapshots/tests__roundtrip__test_generic_structs__generic_associated_type_field.snap
---
source: borsh/tests/roundtrip/test_generic_structs.rs
expression: data
---
[
    5,
    0,
    0,
    0,
    118,
    97,
    108,
    117,
    101,
    5,
    0,
    0,
    0,
    102,
    105,
    101,
    108,
    100,
]
